# qqmusic-cli

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  LICENCE  README.md  index.html  mkdocs.yml  sitemap.xml  vcpkg.json
.github/workflows/: ci.yml
doc/: README_cn.md  qqmusicIcon.txt
scripts/: vcpkgInstall.bat  vcpkgInstall.cmake  vcpkgInstall.sh
src/: main.cc
src/utils/: CMakeLists.txt
src/utils/include/: dclinklist.hpp
